--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -28,7 +28,7 @@
 
 # External link
 - title: GitHub repository
-  url: https://github.com/jupyter/jupyter-book
+  url: https://github.com/DPotoyan/Chem324
   external: true
   not_numbered: true
 
