--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -55,7 +55,7 @@
     url: /LEC3-Chem324
     not_numbered: true
   - title: 1.3 Crash course of Python and interactive plotting.
-    url: /features/markdown
+    url: /python-intro
     not_numbered: true
 
 
