--- a/_config.yml
+++ b/_config.yml
@@ -53,11 +53,11 @@ jupyterhub_url: ''                     # The URL for your JupyterHub. If no URL,
 jupyterhub_interact_text: Interact             # The text that interact buttons will contain.
 
 # Binder link settings
-use_binder_button: false                 # If 'true', add a binder button for interactive links
-binderhub_url: https://mybinder.org                        # The URL for your BinderHub. If no URL, use ""
-binder_repo_base: https://github.com/                     # The site on which the textbook repository is hosted
-binder_repo_org: YOUR-ORG                     # The username or organization that owns this repository
-binder_repo_name: YOUR-REPO                        # The name of the repository on the web
+use_binder_button: true                # If 'true', add a binder button for interactive links
+binderhub_url: https://mybinder.org/v2/gh/DPotoyan/Chem324/content/master       # The URL for your BinderHub. If no URL, use ""
+binder_repo_base: https://github.com/DPotoyan/Chem324                     # The site on which the textbook repository is hosted
+binder_repo_org: Iowa State University                   # The username or organization that owns this repository
+binder_repo_name: Chem324-2019@ISU                        # The name of the repository on the web
 binder_repo_branch: gh-pages                   # The branch on which your textbook is hosted.
 binderhub_interact_text: Interact              # The text that interact buttons will contain.
 
