--- a/_config.yml
+++ b/_config.yml
@@ -54,11 +54,11 @@ jupyterhub_interact_text: Interact             # The text that interact buttons 
 
 # Binder link settings
 use_binder_button: true                # If 'true', add a binder button for interactive links
-binderhub_url: https://mybinder.org/v2/gh/DPotoyan/Chem324/content/master       # The URL for your BinderHub. If no URL, use ""
+binderhub_url: https://mybinder.org/v2/gh/DPotoyan/Chem324/tree/master/content/master       # The URL for your BinderHub. If no URL, use ""
 binder_repo_base: https://github.com/DPotoyan/Chem324                     # The site on which the textbook repository is hosted
-binder_repo_org: Iowa State University                   # The username or organization that owns this repository
-binder_repo_name: Chem324-2019@ISU                        # The name of the repository on the web
-binder_repo_branch: gh-pages                   # The branch on which your textbook is hosted.
+binder_repo_org:                    # The username or organization that owns this repository
+binder_repo_name:                        # The name of the repository on the web
+binder_repo_branch:                    # The branch on which your textbook is hosted.
 binderhub_interact_text: Interact              # The text that interact buttons will contain.
 
 # Thebelab settings
