--- a/_config.yml
+++ b/_config.yml
@@ -53,12 +53,12 @@ jupyterhub_url: ''                     # The URL for your JupyterHub. If no URL,
 jupyterhub_interact_text: Interact             # The text that interact buttons will contain.
 
 # Binder link settings
-use_binder_button: true                # If 'true', add a binder button for interactive links
-binderhub_url: ""       # The URL for your BinderHub. If no URL, use ""
-binder_repo_base: https://github.com/DPotoyan/Chem324                     # The site on which the textbook repository is hosted
-binder_repo_org:                    # The username or organization that owns this repository
-binder_repo_name:                        # The name of the repository on the web
-binder_repo_branch:                    # The branch on which your textbook is hosted.
+use_binder_button: true                   # If 'true', add a binder button for interactive links
+binderhub_url: https://mybinder.org       # The URL for your BinderHub. If no URL, use ""
+binder_repo_base:  https://github.com     # The site on which the textbook repository is hosted
+binder_repo_org:  dpotoyan                # The username or organization that owns this repository
+binder_repo_name:  Chem324                      # The name of the repository on the web
+binder_repo_branch:  master                 # The branch on which your textbook is hosted.
 binderhub_interact_text: Interact              # The text that interact buttons will contain.
 
 # Thebelab settings
