--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -44,20 +44,22 @@
 
 # A chapter w/ a collection of sections beneath it
 - title: 1.0 Intro to QM thinking.
-  url: /LEC1-Chem324
+  url: /LEC0-Chem324
   not_numbered: true
   expand_sections: true
   sections:
-  - title: 1.1 Photoelectric effect.
+  - title: 1.1 Black Body Radiation.
+    url: /LEC1-Chem324
+    not_numbered: true
+  - title: 1.2 Photoelectric effect.
     url: /LEC2-Chem324
     not_numbered: true
-  - title:  1.2 Wave particle duality
+  - title:  1.3 Wave particle duality
     url: /LEC3-Chem324
     not_numbered: true
-  - title: 1.3 Crash course of Python and interactive plotting.
+  - title: 1.4 Crash course of Python and interactive plotting.
     url: /python-intro
     not_numbered: true
-
 
 # A chapter w/ a collection of sections beneath it
 - title: 2.0 Waves
