--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -60,6 +60,9 @@
   - title: 1.4 Crash course of Python and interactive plotting.
     url: /python-intro
     not_numbered: true
+  - title: 1.5 Appendix A. Complex numbers.
+    url: /AppendixA_complex_numbers
+    not_numbered: true
 
 # A chapter w/ a collection of sections beneath it
 - title: 2.0 Waves
