--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -44,18 +44,18 @@
 
 # A chapter w/ a collection of sections beneath it
 - title: 1.0 Intro to QM thinking.
-  url: /LEC0-Chem324
+  url: /Lec0-Chem324
   not_numbered: true
   expand_sections: true
   sections:
   - title: 1.1 Black Body Radiation.
-    url: /LEC1-Chem324
+    url: /Lec1-Chem324
     not_numbered: true
   - title: 1.2 Photoelectric effect.
-    url: /LEC2-Chem324
+    url: /Lec2-Chem324
     not_numbered: true
   - title:  1.3 Wave particle duality
-    url: /LEC3-Chem324
+    url: /Lec3-Chem324
     not_numbered: true
   - title: 1.4 Crash course of Python and interactive plotting.
     url: /python-intro
@@ -66,12 +66,12 @@
 
 # A chapter w/ a collection of sections beneath it
 - title: 2.0 Waves
-  url: /LEC4-Chem324
+  url: /Lec4-Chem324
   not_numbered: true
   expand_sections: true
   sections:
   - title: 2.1 Mathematics of Waves
-    url: /LEC5-Chem324
+    url: /Lec5-Chem324
     not_numbered: true
   - title: 2.2 Visualizing and animating waves.
     url: /features/markdown
