--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -74,7 +74,7 @@
     url: /Lec5-Chem324
     not_numbered: true
   - title: 2.2 Visualizing and animating waves.
-    url: /features/markdown
+    url: /waves_1D
     not_numbered: true
 
 - title: 3.0 Schrodinger Equation.
