--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -57,10 +57,13 @@
   - title:  1.3 Wave particle duality
     url: /Lec3-Chem324
     not_numbered: true
-  - title: 1.4 Crash course of Python and interactive plotting.
+  - title: 1.4 A Crash course of Python.
     url: /python-intro
     not_numbered: true
-  - title: 1.5 Appendix A. Complex numbers.
+  - title: 1.5 Python CookBook.
+    url: /python-cookbook
+    not_numbered: true
+  - title: 1.6 Appendix A. Complex numbers.
     url: /AppendixA_complex_numbers
     not_numbered: true
 
@@ -74,11 +77,11 @@
     url: /Lec5-Chem324
     not_numbered: true
   - title: 2.2 Visualizing and animating waves.
-    url: /waves_1D
+    url: /waves_1d
     not_numbered: true
 
 - title: 3.0 Schrodinger Equation.
-  url: /features/markdown
+  url: /Lec6-Chem324
   not_numbered: true
   expand_sections: true
   sections:
