fix names of files

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -77,7 +77,7 @@
     url: /Lec5-Chem324
     not_numbered: true
   - title: 2.2 Visualizing and animating waves.
-    url: /waves_1d
+    url: /waves-1d
     not_numbered: true
 
 - title: 3.0 Schrodinger Equation.
