--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -94,6 +94,9 @@
   - title: 3.3 Mathematics of QM
     url: /features/markdown
     not_numbered: true
+  - title: 3.4 Appendix B. Probabilities with Python.
+    url: /AppendixB_probabilities
+    not_numbered: true
 
 - title: 4.0 Applications of QM
   url: /features/markdown
