--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -85,8 +85,8 @@
   not_numbered: true
   expand_sections: true
   sections:
-  - title: 3.1 Interpretation of Schrodinger equation.
-    url: /features/markdown
+  - title: 3.1 Probabilistic meaning of wave function.
+    url: /Lec7-Chem324
     not_numbered: true
   - title: 3.2 Postulates of QM
     url: /features/markdown
