--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -89,7 +89,7 @@
     url: /Lec7-Chem324
     not_numbered: true
   - title: 3.2 Postulates of QM
-    url: /features/markdown
+    url: /Lec8-Chem324
     not_numbered: true
   - title: 3.3 Mathematics of QM
     url: /features/markdown
