--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -92,7 +92,7 @@
     url: /Lec8-Chem324
     not_numbered: true
   - title: 3.3 Mathematics of QM
-    url: /features/markdown
+    url: /Lec9-Chem324
     not_numbered: true
   - title: 3.4 Appendix B. Probabilities with Python.
     url: /AppendixB_probabilities
