--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -106,10 +106,10 @@
   - title: 4.1 Particle in a Box.
     url: /features/markdown
     not_numbered: true
-  - title: 4.2 Rotators.
-    url: /features/markdown
+  - title: 4.2 Oscillators.
+    url: /Lec4-2
     not_numbered: true
-  - title: 4.3 Oscilators.
+  - title: 4.3 Rotators.
     url: /features/markdown
     not_numbered: true
 
