--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -99,18 +99,18 @@
     not_numbered: true
 
 - title: 4.0 Applications of QM
-  url: /features/markdown
+  url: /Lec4-0
   not_numbered: true
   expand_sections: true
   sections:
   - title: 4.1 Particle in a Box.
-    url: /features/markdown
+    url: /Lec4-1
     not_numbered: true
   - title: 4.2 Oscillators.
     url: /Lec4-2
     not_numbered: true
   - title: 4.3 Rotators.
-    url: /features/markdown
+    url: /Lec4-3
     not_numbered: true
 
 # Divider for meta-pages and content page
