--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -112,6 +112,9 @@
   - title: 4.3 Rotators.
     url: /Lec4-3
     not_numbered: true
+  - title: 4.4 Visualziing Harmonic OScillator Solutions
+    url: /HarmOsc_visualize
+    not_numbered: true
 
 # Divider for meta-pages and content page
 - divider: true
