--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,290 @@
-# Useful for MyBinder configuration
-numpy
-matplotlib
-nbinteract
-scipy
-jupyter-book
-sympy
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+alabaster=0.7.12=py_0
+alembic=1.0.10=pypi_0
+anaconda-client=1.7.2=py_0
+anaconda-navigator=1.9.7=py36_0
+appdirs=1.4.3=pypi_0
+appnope=0.1.0=py36_1000
+asciitree=0.3.3=py_2
+asn1crypto=0.24.0=py36_1003
+astroid=2.2.5=py36_0
+attrs=19.1.0=py_0
+autopep8=1.4.4=pypi_0
+babel=2.7.0=py_0
+backcall=0.1.0=py_0
+beautifulsoup4=4.8.0=py36_0
+bhmm=0.6.3=py36h917ab60_1002
+biopython=1.74=py36h01d97ff_0
+bleach=3.1.0=py_0
+blosc=1.17.0=h6de7cb9_1
+bokeh=1.3.4=py36_0
+bzip2=1.0.8=h01d97ff_0
+ca-certificates=2019.9.11=hecc5488_0
+certifi=2019.6.16=py36_1
+cffi=1.12.3=py36hccf1714_0
+cftime=1.0.3.4=py36h1e5eb4f_1001
+chardet=3.0.4=py36_1003
+click=6.7=py_1
+cloudpickle=1.2.1=py_0
+clyent=1.2.2=py_1
+conda=4.7.12=py36_0
+conda-build=3.18.9=py36_3
+conda-package-handling=1.4.1=py36_0
+contact_map=0.4.0=py_0
+cryptography=2.7=py36h212c5bf_0
+curl=7.65.3=h22ea746_0
+cycler=0.10.0=py_1
+cytoolz=0.10.0=py36h01d97ff_0
+dask=2.3.0=py_0
+dask-core=2.3.0=py_0
+datreant=1.0.2=py36_1000
+dbus=1.13.6=h2f22bb5_0
+decorator=4.4.0=py_0
+defusedxml=0.5.0=py_1
+dill=0.3.0=py36_0
+distributed=2.3.2=py_1
+docutils=0.15.2=py36_0
+embree3=3.5.2=h04f5b5a_0
+entrypoints=0.3=py36_1000
+expat=2.2.5=h6de7cb9_1003
+fastcache=1.1.0=py36h01d97ff_0
+ffmpeg=4.2=h5c2b479_0
+fftw3f=3.3.4=2
+filelock=3.0.10=py_0
+freetype=2.10.0=h24853df_1
+fresnel=0.10.0=py36haf112f3_0
+freud=1.2.2=py36h770b8ee_0
+fsspec=0.4.2=py_0
+future=0.17.1=py36_1000
+fuzzywuzzy=0.17.0=py_0
+gettext=0.19.8.1=h46ab8bc_1002
+glib=2.58.3=h9d45998_1002
+glob2=0.7=py_0
+gmp=6.1.2=h0a44026_1000
+gmpy2=2.1.0b1=py36h1744cca_0
+gnutls=3.6.5=h53004b3_1002
+griddataformats=0.5.0=py_0
+gromacswrapper=0.8.0=pypi_0
+gsd=1.8.1=py36heacc8b8_0
+h5py=2.9.0=nompi_py36h6248fd5_1104
+hdf4=4.2.13=hf3c6af0_1002
+hdf5=1.10.5=nompi_h15a436c_1103
+hdf5-1820=1.8.20=0
+heapdict=1.0.0=py36_1000
+hoobas=2.0=dev_0
+hoomd=2.6.0=py36haf112f3_0
+icu=64.2=h6de7cb9_1
+idna=2.8=py36_1000
+imageio=2.5.0=py36_0
+imagesize=1.1.0=py_0
+intel-openmp=2019.4=233
+ipydatawidgets=4.0.1=py_0
+ipykernel=5.1.2=py36h5ca1d4c_0
+ipyscales=0.3.0=py_0
+ipython=7.7.0=py36h5ca1d4c_0
+ipython_genutils=0.2.0=py_1
+ipyvolume=0.5.2=py36_0
+ipywebrtc=0.5.0=py36_0
+ipywidgets=7.5.1=py_0
+isort=4.3.21=py36_0
+jedi=0.13.3=pypi_0
+jinja2=2.10.1=py_0
+joblib=0.13.2=py_0
+jpeg=9c=h1de35cc_1001
+json5=0.8.5=py_0
+jsoncpp=1.8.4=h770b8ee_1001
+jsonschema=3.0.2=py36_0
+jupyter-book=0.5.1=pypi_0
+jupyter_client=5.3.1=py_0
+jupyter_core=4.4.0=py_0
+jupyterlab=1.0.9=py36_0
+jupyterlab_server=1.0.6=py_0
+keyring=19.1.0=py36_0
+kiwisolver=1.1.0=py36h770b8ee_0
+krb5=1.16.3=hcfa6398_1001
+lame=3.100=h1de35cc_1001
+lammps=20Apr2018=pypi_0
+lazy-object-proxy=1.4.2=py36h01d97ff_0
+libarchive=3.3.3=h5c473cc_1006
+libblas=3.8.0=12_openblas
+libcblas=3.8.0=12_openblas
+libcurl=7.65.3=h16faf7d_0
+libcxx=8.0.1=0
+libcxxabi=8.0.1=0
+libedit=3.1.20170329=hcfe32e1_1001
+libffi=3.2.1=h6de7cb9_1006
+libgfortran=4.0.0=2
+libiconv=1.15=h01d97ff_1005
+liblapack=3.8.0=12_openblas
+liblief=0.9.0=h2a1bed3_1
+libnetcdf=4.6.2=h1a02027_1002
+libopenblas=0.3.7=h4bb4525_1
+libpng=1.6.37=h2573ce8_0
+libsodium=1.0.17=h01d97ff_0
+libssh2=1.8.2=hcdc9a53_2
+libtiff=4.0.10=hd08fb8f_1003
+libxml2=2.9.9=h12c6b28_5
+llvm-openmp=8.0.1=h770b8ee_0
+locket=0.2.0=py_2
+lxml=4.4.1=pypi_0
+lz4-c=1.8.3=h6de7cb9_1001
+lzo=2.10=h1de35cc_1000
+mako=1.0.12=pypi_0
+markupsafe=1.1.1=py36h1de35cc_0
+matplotlib=2.2.3=py36h54f8f79_0
+matplotlib-base=3.1.1=py36h3a684a6_1
+mccabe=0.6.1=py_1
+mdanalysis=0.19.2=py36h0a44026_1000
+mdbenchmark=2.0.0=py36_0
+mdtraj=1.9.3=py36h5a8e3e4_0
+meshio=3.1.1=pypi_0
+mistune=0.8.4=py36h1de35cc_1000
+mmtf-python=1.1.2=py_0
+mock=3.0.5=py36_0
+modeller=9.22=py36_1
+mpc=1.1.0=h3aece09_1006
+mpfr=4.0.2=h0a95893_0
+mpmath=1.1.0=py_0
+msgpack-python=0.6.1=py36h04f5b5a_0
+msmtools=1.2.4=py36h917ab60_1000
+multiprocess=0.70.8=py36h01d97ff_0
+nbclean=0.3.2=pypi_0
+nbconvert=5.6.0=py36_1
+nbformat=4.4.0=py_1
+nbgrader=0.5.5=pypi_0
+ncurses=6.1=h0a44026_1002
+netcdf4=1.5.1.2=py36h876e625_1
+nettle=3.4.1=h3efe00b_1002
+networkx=2.3=py_0
+nglview=2.7.1=pyh5ca1d4c_0
+notebook=6.0.1=py36_0
+nteract-on-jupyter=2.1.3=pypi_0
+numexpr=2.7.0=py36h86efe34_0
+numkit=1.1.2=pypi_0
+numpy=1.17.1=py36h6b0580a_0
+numpydoc=0.9.1=py_0
+olefile=0.46=py_0
+openh264=1.8.0=hd9629dc_1000
+openmm=7.3.0=py36_cuda92_rc_1
+openssl=1.1.1c=h01d97ff_0
+packaging=19.0=py_0
+pandas=0.25.1=py36h86efe34_0
+pandoc=2.7.3=0
+pandocfilters=1.4.2=py_1
+parso=0.5.1=py_0
+partd=1.0.0=py_0
+pathlib2=2.3.4=py36_0
+pathos=0.2.4=py_0
+patsy=0.5.1=py_0
+pcre=8.41=h0a44026_1003
+pdbfixer=1.5=py36_0
+pexpect=4.7.0=py36_0
+pickleshare=0.7.5=pypi_0
+pillow=6.1.0=py36h75ffe9a_1
+pip=19.1.1=pypi_0
+pipdate=0.3.2=pypi_0
+pkg-config=0.29.2=h112b980_1005
+pkginfo=1.5.0.1=py_0
+pox=0.2.6=py_0
+ppft=1.6.6.1=py36_0
+prometheus_client=0.7.1=py_0
+prompt_toolkit=2.0.9=py_0
+psutil=5.6.3=py36h01d97ff_0
+ptyprocess=0.6.0=py_1001
+py-lief=0.9.0=py36h6d6d4d2_1
+pycodestyle=2.5.0=py_0
+pycosat=0.6.3=py36h1de35cc_1001
+pycparser=2.19=py36_1
+pydocstyle=3.0.0=pypi_0
+pyemma=2.5.6=py36h051e8ed_1001
+pyflakes=2.1.1=py_0
+pygments=2.4.2=py_0
+pylint=2.3.1=py36_0
+pyopenssl=19.0.0=py36_0
+pyparsing=2.4.2=py_0
+pyqt=5.9.2=py36h2a560b1_2
+pyrsistent=0.15.4=py36h01d97ff_0
+pysocks=1.7.0=py36_0
+pytables=3.5.2=py36hd39446c_1
+python=3.6.7=h94afb7f_1005
+python-dateutil=2.8.0=py_0
+python-editor=1.0.4=pypi_0
+python-jsonrpc-server=0.1.2=pypi_0
+python-language-server=0.26.1=pypi_0
+python-levenshtein=0.12.0=py36h01d97ff_1001
+python-libarchive-c=2.8=py36_1004
+python-ternary=1.0.6=py_0
+python.app=1.2=py36h1de35cc_1200
+pythreejs=2.1.1=py_0
+pytraj=2.0.2=py36_0
+pytz=2019.2=py_0
+pywavelets=1.0.3=py36h1e5eb4f_1
+pyyaml=5.1.2=py36h01d97ff_0
+pyzmq=18.0.2=py36hee98d25_2
+qhull=2015.2=h04f5b5a_1000
+qt=5.9.7=h8cf7e54_3
+qtawesome=0.6.0=py_0
+qtconsole=4.5.4=py_0
+qtpy=1.9.0=py_0
+readline=8.0=hcfe32e1_0
+requests=2.22.0=py36_1
+ripgrep=11.0.2=0
+rope=0.14.0=py_0
+ruamel-yaml=0.15.97=pypi_0
+ruamel_yaml=0.15.71=py36h1de35cc_1000
+scandir=1.10.0=py36h1de35cc_0
+scikit-image=0.15.0=py36h86efe34_2
+scikit-learn=0.21.3=py36hd4ffd6c_0
+scipy=1.3.1=py36h7e0e109_2
+seaborn=0.9.0=py_1
+send2trash=1.5.0=py_0
+setuptools=41.0.1=pypi_0
+sip=4.19.8=py36h0a44026_1000
+six=1.12.0=py36_1000
+snowballstemmer=1.9.0=py_0
+sortedcontainers=2.1.0=py_0
+soupsieve=1.9.3=py36_0
+sphinx=2.2.0=py_0
+sphinxcontrib-applehelp=1.0.1=py_0
+sphinxcontrib-devhelp=1.0.1=py_0
+sphinxcontrib-htmlhelp=1.0.2=py_0
+sphinxcontrib-jsmath=1.0.1=py_0
+sphinxcontrib-qthelp=1.0.2=py_0
+sphinxcontrib-serializinghtml=1.1.1=py_0
+spyder=3.3.6=py36_0
+spyder-kernels=0.5.1=py36_0
+sqlalchemy=1.3.7=py36h01d97ff_0
+sqlite=3.29.0=hb7d70f7_0
+statsmodels=0.10.1=py36heacc8b8_0
+sympy=1.4=py36_0
+tabulate=0.8.3=py_0
+tbb=2019.7=h770b8ee_0
+tblib=1.4.0=py_0
+terminado=0.8.2=py36_0
+testpath=0.4.2=py_1001
+tk=8.6.9=h2573ce8_1002
+toolz=0.10.0=py_0
+tornado=6.0.3=py36h01d97ff_0
+tqdm=4.35.0=py_0
+traitlets=4.3.2=py36_1000
+traittypes=0.2.1=py_1
+typed-ast=1.4.0=py36h01d97ff_0
+urllib3=1.25.3=py36_0
+vtk=8.2.0=py36hcba847f_203
+wcwidth=0.1.7=py_1
+webencodings=0.5.1=py_1
+wheel=0.33.6=py36_0
+widgetsnbextension=3.5.1=py36_0
+wrapt=1.11.2=py36h01d97ff_0
+wurlitzer=1.0.3=py36_0
+x264=1!152.20180806=h1de35cc_0
+xdg=1.0.5=py36_2
+xz=5.2.4=h1de35cc_1001
+yaml=0.1.7=h1de35cc_1001
+yapf=0.27.0=pypi_0
+zeromq=4.3.2=h6de7cb9_2
+zict=1.0.0=py_0
+zlib=1.2.11=h01d97ff_1005
+zstd=1.4.0=ha9f0a20_0
