--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -112,8 +112,14 @@
   - title: 4.3 Rotators.
     url: /Lec4-3
     not_numbered: true
-  - title: 4.4 Visualziing Harmonic OScillator Solutions
+  - title: 4.4 Angular momentum in QM
+    url: /Lec4-4
+    not_numbered: true
+  - title: 4.5 Visualziing Harmonic Oscillator Solutions
     url: /HarmOsc_visualize
+    not_numbered: true
+  - title: 4.6 Visualziing Spherical Harmonics
+    url: /SphHarm_visualize
     not_numbered: true
 
 # Divider for meta-pages and content page
