--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -122,5 +122,15 @@
     url: /SphHarm_visualize
     not_numbered: true
 
+
+- title: 5.0 Hydrogen atom
+  url: /Lec5-0
+  not_numbered: true
+  expand_sections: true
+  sections:
+  - title: 5.1 Schrodinger equation for Hydrogen atom
+    url: /Lec5-1
+    not_numbered: true
+
 # Divider for meta-pages and content page
 - divider: true
