--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -131,6 +131,9 @@
   - title: 5.1 Schrodinger equation for Hydrogen atom
     url: /Lec5-1
     not_numbered: true
+  - title: 5.2 Spin
+    url: /Lec5-2
+    not_numbered: true
   - title: 5.3 Visualizing H atom wavefunctions
     url: /H-atom-wavef
     not_numbered: true
