--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -23,7 +23,7 @@
 
 # Top-level page
 - title: Home
-  url: /intro
+  url: /Intro
   not_numbered: true
 
 # External link
@@ -42,20 +42,20 @@
 # Add a header and sample content section
 - header: Lecture Notes
 
-# A chapter w/ a collection of sections beneath it
+# Chapter 1 with subchapters
 - title: 1.0 Intro to QM thinking.
-  url: /Lec0-Chem324
+  url: /Lec1-0
   not_numbered: true
   expand_sections: true
   sections:
   - title: 1.1 Black Body Radiation.
-    url: /Lec1-Chem324
+    url: /Lec1-1
     not_numbered: true
   - title: 1.2 Photoelectric effect.
-    url: /Lec2-Chem324
+    url: /Lec1-2
     not_numbered: true
   - title:  1.3 Wave particle duality
-    url: /Lec3-Chem324
+    url: /Lec1-3
     not_numbered: true
   - title: 1.4 A Crash course of Python.
     url: /python-intro
@@ -69,30 +69,30 @@
 
 # A chapter w/ a collection of sections beneath it
 - title: 2.0 Waves
-  url: /Lec4-Chem324
+  url: /Lec2-0
   not_numbered: true
   expand_sections: true
   sections:
   - title: 2.1 Mathematics of Waves
-    url: /Lec5-Chem324
+    url: /Lec2-1
     not_numbered: true
   - title: 2.2 Visualizing and animating waves.
     url: /waves-1d
     not_numbered: true
 
 - title: 3.0 Schrodinger Equation.
-  url: /Lec6-Chem324
+  url: /Lec3-0
   not_numbered: true
   expand_sections: true
   sections:
   - title: 3.1 Probabilistic meaning of wave function.
-    url: /Lec7-Chem324
+    url: /Lec3-1
     not_numbered: true
   - title: 3.2 Postulates of QM
-    url: /Lec8-Chem324
+    url: /Lec3-2
     not_numbered: true
   - title: 3.3 Mathematics of QM
-    url: /Lec9-Chem324
+    url: /Lec3-3
     not_numbered: true
   - title: 3.4 Appendix B. Probabilities with Python.
     url: /AppendixB_probabilities
@@ -136,6 +136,37 @@
     not_numbered: true
   - title: 5.3 Visualizing H atom wavefunctions
     url: /H-atom-wavef
+    not_numbered: true
+
+
+- title: 6.0 Approximation methods of QM
+  url: /Lec6-0
+  not_numbered: true
+  expand_sections: true
+  sections:
+  - title: 6.1 Perturbation Theory
+    url: /Lec6-1
+    not_numbered: true
+  - title: 6.2 Variation Method
+    url: /Lec6-2
+    not_numbered: true
+  - title: 6.3 Linear Algebra and QM
+    url: /Lec6-3
+    not_numbered: true
+
+- title: 7.0 Multi Electron Systems
+  url: /Lec7-0
+  not_numbered: true
+  expand_sections: true
+  sections:
+  - title: 7.1 Multi-electron atoms. Pauli exclusion, Hund rules.
+    url: /Lec7-1
+    not_numbered: true
+  - title: 7.2 Born-Oppenheimer approximation and the nature of chemical bond
+    url: /Lec7-2
+    not_numbered: true
+  - title: 7.3 Molecular Orbitals
+    url: /Lec7-3
     not_numbered: true
 
 # Divider for meta-pages and content page
