--- a/_toc.yml
+++ b/_toc.yml
@@ -1,4 +1,4 @@
-# Learn more at https://jupyterbook.org/customize/toc.html
+# Learn more at https://jupyterbook.org/customize/toc.html##
 format: jb-book
 root: index
 options:  # The options key will be applied to all chapters, but not sub-sections
