--- a/_toc.yml
+++ b/_toc.yml
@@ -6,9 +6,9 @@ options:  # The options key will be applied to all chapters, but not sub-section
 parts:
 - caption: Getting Started 
   chapters:
-  - file: Lec1-0
+  - file: content/Lec1-0
     sections:
-    - file: Lec1-1
-    - file: Lec1-2
-    - file: Lec1-3
-  - file: Lec2-0
+    - file: content/Lec1-1
+    - file: content/Lec1-2
+    - file: content/Lec1-3
+  - file: content/Lec2-0
