--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ author                      : Davit Potoyan  # The author of the book
 copyright                   : "2023"  # Copyright year to be placed in the footer
 logo                        : cat.jpeg  # A path to the book logo
 
+latex:
+  latex_documents:
+    targetname: book.tex
+
 exclude_patterns: [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints", LICENSE.md]
 # Information about where the book exists on the web
 repository:
@@ -54,5 +58,8 @@ parse:
 
 sphinx:
   config:
+    extra_extensions:
+    - sphinx.ext.intersphinx
     html_js_files:
     - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
+    mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
