--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 title                       : Quantum Mechanics for Chemistry # The title of the book. Will be placed in the left navbar.
 author                      : Davit Potoyan  # The author of the book
 copyright                   : "2023"  # Copyright year to be placed in the footer
-logo                        : cat.jpeg  # A path to the book logo
+logo                        : cat2.jpeg  # A path to the book logo
 
 latex:
   latex_documents:
