'first note is out'

--- a/_toc.yml
+++ b/_toc.yml
@@ -6,7 +6,7 @@ options:  # The options key will be applied to all chapters, but not sub-section
 parts:
 - caption: Getting Started 
   chapters:
-  - file: content/Lec1-0
+  - file: ch01/note01
     sections:
     - file: content/Lec1-1
     - file: content/Lec1-2
