--- a/_toc.yml
+++ b/_toc.yml
@@ -6,9 +6,7 @@ options:  # The options key will be applied to all chapters, but not sub-section
 parts:
 - caption: Getting Started 
   chapters:
+  - file: ch01/index
     sections:
     - file: ch01/note01
-    - file: content/Lec1-1
-    - file: content/Lec1-2
-    - file: content/Lec1-3
   - file: content/Lec2-0
