--- a/_toc.yml
+++ b/_toc.yml
@@ -12,3 +12,7 @@ parts:
     - file: ch01/note02
     - file: ch01/note03
     - file: ch01/note04
+  - file: ch02/index
+    sections:
+    - file: ch02/note01
+    - file: ch02/note02
