'adding chap 1 2 nd 3'

--- a/_toc.yml
+++ b/_toc.yml
@@ -4,7 +4,7 @@ root: index
 options:  # The options key will be applied to all chapters, but not sub-sections
   numbered: True
 parts:
-- caption: Getting Started 
+- caption: Chapters 
   chapters:
   - file: ch01/index
     sections:
@@ -16,3 +16,10 @@ parts:
     sections:
     - file: ch02/note01
     - file: ch02/note02
+  - file: ch03/index
+    sections:
+    - file: ch03/note01
+    - file: ch03/note02
+    - file: ch03/note03
+    - file: ch03/note04
+  
