--- a/_toc.yml
+++ b/_toc.yml
@@ -22,4 +22,10 @@ parts:
     - file: ch03/note02
     - file: ch03/note03
     - file: ch03/note04
-  
+  - file: ch04/index
+    sections:
+    - file: ch04/note01
+    - file: ch04/note02
+    - file: ch04/note03
+    - file: ch04/note04
+    - file: ch04/note05
