--- a/_toc.yml
+++ b/_toc.yml
@@ -29,3 +29,20 @@ parts:
     - file: ch04/note03
     - file: ch04/note04
     - file: ch04/note05
+  - file: ch05/index
+    sections:
+    - file: ch05/note01
+    - file: ch05/note02
+    - file: ch05/note03
+  - file: ch06/index
+    sections:
+    - file: ch06/note01
+    - file: ch06/note02
+    - file: ch06/note03
+    - file: ch06/note04
+  - file: ch07/index
+    sections:
+    - file: ch07/note01
+    - file: ch07/note02
+    - file: ch07/note03
+    - file: ch07/note04
