--- a/_toc.yml
+++ b/_toc.yml
@@ -45,3 +45,7 @@ parts:
     - file: ch07/note02
     - file: ch07/note03
     - file: ch07/note04
+  - file: ch08/index
+    sections:
+    - file: ch07/note01
+    - file: ch07/note02
