--- a/_toc.yml
+++ b/_toc.yml
@@ -26,6 +26,7 @@ parts:
     sections:
     - file: ch04/note01
     - file: ch04/note02
+    - file: ch04/note02B
     - file: ch04/note03
     - file: ch04/note04
     - file: ch04/note05
