--- a/_toc.yml
+++ b/_toc.yml
@@ -25,8 +25,7 @@ parts:
   - file: ch04/index
     sections:
     - file: ch04/note01
-    - file: ch04/note02A
-    - file: ch04/note02B
+    - file: ch04/note02
     - file: ch04/note03
     - file: ch04/note04A
     - file: ch04/note04B
