'harmonic oscillator complete'

--- a/_toc.yml
+++ b/_toc.yml
@@ -26,7 +26,9 @@ parts:
     sections:
     - file: ch04/note01
     - file: ch04/note02
-    - file: ch04/note03
+    - file: ch04/note03A
+    - file: ch04/note03B
+    - file: ch04/note03C
     - file: ch04/note04A
     - file: ch04/note04B
   - file: ch05/index
