--- a/_toc.yml
+++ b/_toc.yml
@@ -31,6 +31,8 @@ parts:
     - file: ch04/note03C
     - file: ch04/note04A
     - file: ch04/note04B
+    - file: ch04/note04C
+    - file: ch04/note05
   - file: ch05/index
     sections:
     - file: ch05/note01
