--- a/_toc.yml
+++ b/_toc.yml
@@ -22,6 +22,8 @@ parts:
     - file: ch03/note02
     - file: ch03/note03
     - file: ch03/note04
+    - file: ch03/note05
+    - file: ch03/note06
   - file: ch04/index
     sections:
     - file: ch04/note01
