--- a/_toc.yml
+++ b/_toc.yml
@@ -24,6 +24,7 @@ parts:
     - file: ch03/note04
     - file: ch03/note05
     - file: ch03/note06
+    - file: ch03/note07
   - file: ch04/index
     sections:
     - file: ch04/note01
