--- a/_toc.yml
+++ b/_toc.yml
@@ -41,6 +41,8 @@ parts:
     - file: ch05/note01
     - file: ch05/note02
     - file: ch05/note03
+    - file: ch05/note04
+    - file: ch05/note05
   - file: ch06/index
     sections:
     - file: ch06/note01
