--- a/_toc.yml
+++ b/_toc.yml
@@ -58,3 +58,10 @@ parts:
     sections:
     - file: ch08/note01
     - file: ch08/note02
+    - file: ch08/note03
+    - file: ch08/note04
+    - file: ch08/note05
+    - file: ch08/note06
+    - file: ch08/note07
+    - file: ch08/note08
+    - file: ch08/note09
