--- a/_toc.yml
+++ b/_toc.yml
@@ -65,3 +65,7 @@ parts:
     - file: ch08/note07
     - file: ch08/note08
     - file: ch08/note09
+
+- caption: Math
+  chapters: 
+  - file: mathA/index
