--- a/_toc.yml
+++ b/_toc.yml
@@ -68,4 +68,10 @@ parts:
 
 - caption: Math
   chapters: 
-  - file: mathA/index
+  - file: math/index
+
+- caption: Code
+   chapters: 
+  - file: demos/index
+    sections:
+    - file: demos/complex_nums
