--- a/_toc.yml
+++ b/_toc.yml
@@ -66,9 +66,9 @@ parts:
     - file: ch08/note08
     - file: ch08/note09
 
-- caption: Math
-  chapters: 
   - file: math/index
+    sections:
+    - file: math/note01
 
 - caption: Code
    chapters: 
