--- a/_toc.yml
+++ b/_toc.yml
@@ -66,12 +66,15 @@ parts:
     - file: ch08/note08
     - file: ch08/note09
 
+
+- caption: Extra stuff
+  chapters: 
+
   - file: math/index
     sections:
     - file: math/note01
 
-- caption: Code
-  chapters: 
   - file: demos/index
     sections:
     - file: demos/complex_nums
+  
