--- a/_toc.yml
+++ b/_toc.yml
@@ -73,6 +73,7 @@ parts:
   - file: math/index
     sections:
     - file: math/note01
+    - file: math/sympy
 
   - file: demos/index
     sections:
