--- a/_toc.yml
+++ b/_toc.yml
@@ -73,10 +73,11 @@ parts:
   - file: math/index
     sections:
     - file: math/note01
-    - file: math/sympy
-
+    - file: math/note02
+    
   - file: demos/index
     sections:
+    - file: math/sympy
     - file: demos/complex_nums
     - file: demos/hydrogen_wavefunctions
   
