'test markdown fig'

--- a/_toc.yml
+++ b/_toc.yml
@@ -74,10 +74,11 @@ parts:
     sections:
     - file: math/note01
     - file: math/note02
+    - file: math/note03
     
   - file: demos/index
     sections:
-    - file: math/sympy
+    - file: demos/sympy
     - file: demos/complex_nums
     - file: demos/hydrogen_wavefunctions
   
