--- a/_toc.yml
+++ b/_toc.yml
@@ -75,6 +75,7 @@ parts:
     - file: math/note01
     - file: math/note02
     - file: math/note03
+    - file: math/note04
     
   - file: demos/index
     sections:
