--- a/_toc.yml
+++ b/_toc.yml
@@ -65,7 +65,7 @@ parts:
     - file: ch08/note07
     - file: ch08/note08
     - file: ch08/note09
-
+  - file: cookbook
 
 - caption: Extra stuff
   chapters: 
@@ -79,6 +79,10 @@ parts:
     
   - file: demos/index
     sections:
+    - file: intro2py
+    - file: intro2numpy
+    - file: intro2viz
+    
     - file: demos/sympy
     - file: demos/complex_nums
     - file: demos/hydrogen_wavefunctions
