'complex nums are back'

--- a/_toc.yml
+++ b/_toc.yml
@@ -76,6 +76,7 @@ parts:
     - file: math/note02
     - file: math/note03
     - file: math/note04
+    - file: math/note05
     
   - file: demos/index
     sections:
@@ -85,5 +86,6 @@ parts:
     
     - file: demos/sympy
     - file: demos/complex_nums
+    - file: demos/waves
     - file: demos/hydrogen_wavefunctions
   
