--- a/_toc.yml
+++ b/_toc.yml
@@ -86,6 +86,7 @@ parts:
     
     - file: demos/sympy
     - file: demos/complex_nums
+    - file: demos/BlackBody
     - file: demos/waves
     - file: demos/hydrogen_wavefunctions
   
