--- a/_toc.yml
+++ b/_toc.yml
@@ -80,10 +80,9 @@ parts:
     
   - file: demos/index
     sections:
-    - file: intro2py
-    - file: intro2numpy
-    - file: intro2viz
-    
+    - file: demos/intro2py
+    - file: demos/intro2numpy
+    - file: demos/intro2viz
     - file: demos/sympy
     - file: demos/complex_nums
     - file: demos/BlackBody
