--- a/_toc.yml
+++ b/_toc.yml
@@ -84,7 +84,7 @@ parts:
     - file: demos/intro2numpy
     - file: demos/intro2viz
     - file: demos/sympy
-    - file: demos/blackbody
+    - file: demos/BlackBody
     - file: demos/waves
     - file: demos/hydrogen_wavefunctions
   
