--- a/_toc.yml
+++ b/_toc.yml
@@ -12,6 +12,7 @@ parts:
     - file: ch01/note02
     - file: ch01/note03
     - file: ch01/note04
+    - file: ch01/BlackBody
   - file: ch02/index
     sections:
     - file: ch02/note01
@@ -84,7 +85,4 @@ parts:
     - file: demos/intro2numpy
     - file: demos/intro2viz
     - file: demos/sympy
-    - file: demos/BlackBody
-    - file: demos/waves
-    - file: demos/hydrogen_wavefunctions
   
