--- a/_toc.yml
+++ b/_toc.yml
@@ -84,5 +84,5 @@ parts:
     - file: demos/intro2py
     - file: demos/intro2numpy
     - file: demos/intro2viz
+    - file: demos/animation
     - file: demos/sympy
-  
