--- a/_toc.yml
+++ b/_toc.yml
@@ -12,6 +12,7 @@ parts:
     - file: ch01/note02
     - file: ch01/note03
     - file: ch01/note04
+    - file: ch01/note05
     - file: ch01/BlackBody
   - file: ch02/index
     sections:
