--- a/_toc.yml
+++ b/_toc.yml
@@ -67,7 +67,8 @@ parts:
     - file: ch08/note07
     - file: ch08/note08
     - file: ch08/note09
-  - file: cookbook
+  - file: scratch
+  - file: units
 
 - caption: Extra stuff
   chapters: 
@@ -78,7 +79,6 @@ parts:
     - file: math/note02
     - file: math/note03
     - file: math/note04
-    - file: math/note05
     
   - file: demos/index
     sections:
