--- a/_toc.yml
+++ b/_toc.yml
@@ -69,6 +69,7 @@ parts:
     - file: ch08/note09
   - file: scratch
   - file: units
+  - file: overview
 
 - caption: Extra stuff
   chapters: 
@@ -78,7 +79,6 @@ parts:
     - file: math/note01
     - file: math/note02
     - file: math/note03
-    - file: math/note04
     
   - file: demos/index
     sections:
