--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ parts:
     - file: ch01/note04
     - file: ch01/note05
     - file: ch01/BlackBody
+    - file: ch01/demo_complex_nums
   - file: ch02/index
     sections:
     - file: ch02/note01
