--- a/_toc.yml
+++ b/_toc.yml
@@ -19,6 +19,7 @@ parts:
     sections:
     - file: ch02/note01
     - file: ch02/note02
+    - file: ch02/waves
   - file: ch03/index
     sections:
     - file: ch03/note01
