'bonus and animation'

--- a/_toc.yml
+++ b/_toc.yml
@@ -20,6 +20,8 @@ parts:
     - file: ch02/note01
     - file: ch02/note02
     - file: ch02/waves
+    - file: ch02/demo_waves
+    - file: ch02/bonus_waves
   - file: ch03/index
     sections:
     - file: ch03/note01
