--- a/_toc.yml
+++ b/_toc.yml
@@ -31,6 +31,7 @@ parts:
     - file: ch03/note05
     - file: ch03/note06
     - file: ch03/note07
+    - file: ch03/PIB
   - file: ch04/index
     sections:
     - file: ch04/note01
