--- a/_toc.yml
+++ b/_toc.yml
@@ -32,6 +32,7 @@ parts:
     - file: ch03/note06
     - file: ch03/note07
     - file: ch03/PIB
+    - file: ch03/PIB3D
   - file: ch04/index
     sections:
     - file: ch04/note01
