--- a/_toc.yml
+++ b/_toc.yml
@@ -26,6 +26,7 @@ parts:
     sections:
     - file: ch03/note01
     - file: ch03/note02
+    - file: ch04/note02B
     - file: ch03/note03
     - file: ch03/note04
     - file: ch03/note05
@@ -36,7 +37,6 @@ parts:
   - file: ch04/index
     sections:
     - file: ch04/note01
-    - file: ch04/note02
     - file: ch04/note03A
     - file: ch04/note03B
     - file: ch04/note03C
