--- a/_toc.yml
+++ b/_toc.yml
@@ -33,6 +33,7 @@ parts:
     - file: ch03/note06
     - file: ch03/PIB
     - file: ch03/PIB3D
+    - file: ch03/operators
   - file: ch04/index
     sections:
     - file: ch04/note01
