'add quantum waves'

--- a/_toc.yml
+++ b/_toc.yml
@@ -34,6 +34,8 @@ parts:
     - file: ch03/PIB
     - file: ch03/PIB3D
     - file: ch03/operators
+    - file: ch03/quantum_waves
+    - file: ch03/bonus_quantum_waves
   - file: ch04/index
     sections:
     - file: ch04/note01
