--- a/_toc.yml
+++ b/_toc.yml
@@ -31,10 +31,9 @@ parts:
     - file: ch03/note04
     - file: ch03/note05
     - file: ch03/note06
-    - file: ch03/PIB
-    - file: ch03/PIB3D
-    - file: ch03/operators
-    - file: ch03/quantum_waves
+    - file: ch03/demo_PIB
+    - file: ch03/demo_operators
+    - file: ch03/demo_quantum_waves
     - file: ch03/bonus_quantum_waves
   - file: ch04/index
     sections:
