--- a/_toc.yml
+++ b/_toc.yml
@@ -45,6 +45,7 @@ parts:
     - file: ch04/note04B
     - file: ch04/note04C
     - file: ch04/note05
+    - file: ch04/demo_ho
   - file: ch05/index
     sections:
     - file: ch05/note01
