--- a/_toc.yml
+++ b/_toc.yml
@@ -50,6 +50,7 @@ parts:
     - file: ch05/note03
     - file: ch05/note04
     - file: ch05/note05
+    - file: ch05/hydrogen_wavefunctions
   - file: ch06/index
     sections:
     - file: ch06/note01
