'lin_var_explain'

--- a/_toc.yml
+++ b/_toc.yml
@@ -53,7 +53,8 @@ parts:
     sections:
     - file: ch06/note01
     - file: ch06/note02
-    - file: ch06/note03
+    - file: ch06/lin_var
+    - file: ch06/demon_lin_var
   - file: ch07/index
     sections:
     - file: ch07/note01
