--- a/_toc.yml
+++ b/_toc.yml
@@ -54,7 +54,7 @@ parts:
     - file: ch06/note01
     - file: ch06/note02
     - file: ch06/lin_var
-    - file: ch06/demon_lin_var
+    - file: ch06/demo_lin_var
   - file: ch07/index
     sections:
     - file: ch07/note01
