--- a/_toc.yml
+++ b/_toc.yml
@@ -72,6 +72,7 @@ parts:
     - file: ch08/note07
     - file: ch08/note08
     - file: ch08/note09
+    - file: ch08/demo_h2plus
   - file: scratch
   - file: units
   - file: overview
