--- a/_toc.yml
+++ b/_toc.yml
@@ -49,6 +49,7 @@ parts:
     - file: ch05/note03
     - file: ch05/note05
     - file: ch05/hydrogen_wavefunctions
+    - file: ch05/bonus_H
   - file: ch06/index
     sections:
     - file: ch06/note01
