--- a/_toc.yml
+++ b/_toc.yml
@@ -75,7 +75,7 @@ parts:
     - file: ch08/note09
     - file: ch08/demo_h2plus
   - file: scratch
-  - file: units
+  - file: cookbook
   - file: overview
 
 - caption: Extra stuff
