--- a/_toc.yml
+++ b/_toc.yml
@@ -26,6 +26,7 @@ parts:
     sections:
     - file: ch03/note01
     - file: ch03/note02
+    - file: ch03/note02A
     - file: ch03/note02B
     - file: ch03/note03
     - file: ch03/note04
