--- a/_toc.yml
+++ b/_toc.yml
@@ -29,6 +29,7 @@ parts:
     - file: ch03/note02A
     - file: ch03/note02B
     - file: ch03/note03
+    - file: ch03/note03A
     - file: ch03/note04
     - file: ch03/note05
     - file: ch03/note06
