--- a/_toc.yml
+++ b/_toc.yml
@@ -81,6 +81,9 @@ parts:
     - file: math/note01
     - file: math/note02
     - file: math/note03
+    - file: math/note04
+    - file: math/note05
+    - file: math/note06
 
 - caption: Extra stuff
   chapters: 
