--- a/_toc.yml
+++ b/_toc.yml
@@ -84,6 +84,7 @@ parts:
     - file: math/note04
     - file: math/note05
     - file: math/note06
+    - file: math/note06
 
 - caption: Extra stuff
   chapters: 
