--- a/_toc.yml
+++ b/_toc.yml
@@ -36,6 +36,7 @@ parts:
     - file: ch03/demo_PIB
     - file: ch03/demo_quantum_waves
     - file: ch03/bonus_quantum_waves
+    - file: ch03/fourier_transform
   - file: ch04/index
     sections:
     - file: ch04/note01
