--- a/_toc.yml
+++ b/_toc.yml
@@ -41,7 +41,8 @@ parts:
   - file: ch04/index
     sections:
     - file: ch04/note01
-    - file: ch04/note03A
+    - file: ch04/note02
+    - file: ch04/note03
     - file: ch04/note03B
     - file: ch04/note04A
     - file: ch04/note04B
