--- a/_toc.yml
+++ b/_toc.yml
@@ -88,6 +88,10 @@ parts:
     - file: math/note06
     - file: math/note08
 
+- file: practice/index
+  sections:
+    - file: practice/note01
+
 - caption: Extra stuff
   chapters: 
 
