--- a/_toc.yml
+++ b/_toc.yml
@@ -44,7 +44,7 @@ parts:
     - file: ch04/note02
     - file: ch04/note03
     - file: ch04/note03B
-    - file: ch04/note04A
+    - file: ch04/note04
     - file: ch04/note04B
     - file: ch04/demo_ho
   - file: ch05/index
