--- a/_toc.yml
+++ b/_toc.yml
@@ -58,6 +58,7 @@ parts:
     - file: ch06/note01
     - file: ch06/note02
     - file: ch06/lin_var
+    - file: ch06/demo_pert
     - file: ch06/demo_lin_var
   - file: ch07/index
     sections:
