--- a/_toc.yml
+++ b/_toc.yml
@@ -65,6 +65,7 @@ parts:
     - file: ch07/note01
     - file: ch07/note02
     - file: ch07/note03
+    - file: ch07/note04
   - file: ch08/index
     sections:
     - file: ch08/note01
