--- a/_toc.yml
+++ b/_toc.yml
@@ -87,6 +87,7 @@ parts:
     - file: math/note05
     - file: math/note06
     - file: math/note08
+    - file: math/demo_benzene
 
   - file: practice/index
     sections:
