--- a/_toc.yml
+++ b/_toc.yml
@@ -78,6 +78,7 @@ parts:
     - file: ch08/note08
     - file: ch08/note09
     - file: ch08/demo_h2plus
+    - file: ch08/demo_benzene
   - file: math/index
     sections:
     - file: math/note01
@@ -87,7 +88,7 @@ parts:
     - file: math/note05
     - file: math/note06
     - file: math/note08
-    - file: math/demo_benzene
+    - file: math
 
   - file: practice/index
     sections:
