--- a/_toc.yml
+++ b/_toc.yml
@@ -15,6 +15,7 @@ parts:
     - file: ch01/note05
     - file: ch01/BlackBody
     - file: ch01/demo_complex_nums
+    - file: ch01/demo_bohr
   - file: ch02/index
     sections:
     - file: ch02/note01
