--- a/_toc.yml
+++ b/_toc.yml
@@ -18,7 +18,7 @@ parts:
   - file: ch02/index
     sections:
     - file: ch02/wave01
-    - file: ch02/note02
+    - file: ch02/wave02
     - file: ch02/waves
     - file: ch02/demo_waves
     - file: ch02/bonus_waves
