--- a/_toc.yml
+++ b/_toc.yml
@@ -24,7 +24,7 @@ parts:
   - file: ch03/index
     sections:
     - file: ch03/note01
-    - file: ch03/note02
+    - file: ch03/wave_fun
     - file: ch03/note02A
     - file: ch03/note02B
     - file: ch03/note03
