--- a/_toc.yml
+++ b/_toc.yml
@@ -27,7 +27,6 @@ parts:
     - file: ch03/wave_fun
     - file: ch03/note02A
     - file: ch03/note02B
-    - file: ch03/note03
     - file: ch03/note03A
     - file: ch03/note04
     - file: ch03/note05
@@ -86,9 +85,9 @@ parts:
     - file: math/note08
     - file: math
 
-  - file: practice/index
+  - file: physics/index
     sections:
-    - file: practice/note01
+    - file: physics/postulates
 
 - caption: Extra stuff
   chapters: 
