--- a/_toc.yml
+++ b/_toc.yml
@@ -54,6 +54,7 @@ parts:
   - file: ch06/index
     sections:
     - file: ch06/note01
+    - file: ch06/note01B
     - file: ch06/note02
     - file: ch06/lin_var
     - file: ch06/demo_pert
