'var and petrubt update'

--- a/_toc.yml
+++ b/_toc.yml
@@ -53,10 +53,10 @@ parts:
     - file: ch05/bonus_H
   - file: ch06/index
     sections:
-    - file: ch06/note01
-    - file: ch06/note01B
-    - file: ch06/note02
-    - file: ch06/lin_var
+    - file: ch06/var
+    - file: ch06/var2
+    - file: ch06/pertrub
+    - file: ch06/pertrub2
     - file: ch06/demo_pert
     - file: ch06/demo_lin_var
   - file: ch07/index
