--- a/_toc.yml
+++ b/_toc.yml
@@ -55,8 +55,8 @@ parts:
     sections:
     - file: ch06/var
     - file: ch06/var2
-    - file: ch06/pertrub
-    - file: ch06/pertrub2
+    - file: ch06/perturb
+    - file: ch06/perturb2
     - file: ch06/demo_pert
     - file: ch06/demo_lin_var
   - file: ch07/index
